@@ -46,13 +46,10 @@ howto: howto.tex
 
 api:
 	@echo Creating API documentation
-	@cd .. && tools/epyrun
-	@mv ../html api
-
-apicheck: 
-	cd .. && tools/epyrun --check
+	@cd .. && pydoctor --project-name="Kiwi" --add-package=kiwi --make-html
+	@mv ../apidocs api
 
 clean:
 	rm -rf api/ howto/ *.log *.aux *.l2h *.dvi *.ps *.bak *~
 
-.PHONY: apicheck clean
+.PHONY: clean
